Fixed avatar and profile img spacing on highlight cards, updated highlight name

--- a/dotabowl-frontend/src/app/welcome/welcome-component.css
+++ b/dotabowl-frontend/src/app/welcome/welcome-component.css
@@ -137,6 +137,16 @@
   transition: box-shadow 0.2s ease;
 }
 
+.avatar-container{
+  margin-left: 3.5rem;
+  margin-right: auto;
+}
+
+.profile-wrapper{
+  margin-right: 3.5rem;
+  margin-left: auto;
+}
+
 .avatar-img {
   width: 6rem;
   height: 6rem;
